<resources>
    <string name="app_name">FirebaseAuth</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="textview">TextView</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="registering_user">Registering User</string>
</resources>
